--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ location ~* ^/api/sleep(\/\d*\/?)?$ {
 
         <li>
             <h3>
-                <a href="/api/combo?a.js,b.js">/api/combo?file1,file2</a>
+                <a href="/api/combo?/a.js,/b.js">/api/combo?file1,file2</a>
                 <span>模拟combo</span>
             </h3>
             <pre>
