--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
             font-weight: 400;
         }
         pre {
-            background-color: #f0f0f0;
             margin: 0;
             margin-top: 10px;
             padding: 0 10px;
+            -webkit-overflow-scrolling: touch;
+            overflow-scrolling: touch;
+            overflow: auto;
+            font: 1rem/1.45 Consolas, "Liberation Mono", Menlo, Courier, monospace;
+            color: #567482;
+            word-wrap: normal;
+            background-color: #f3f6fa;
+            border: solid 1px #dce6f0;
+            border-radius: 0.3rem;
         }
         a {
             font-size: 14px;
@@ -27,8 +35,7 @@
             padding-left: 20px;
         }
         ol {
-            padding: 0;
-            padding-left: 40px;
+            padding: 0 20px;
         }
     </style>
 </head>
