--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ location ~* ^/api/dump(\/.*)?$ {
     <h2>link</h2>
     <ul>
         <li><a href="https://github.com/openresty/echo-nginx-module">echo-nginx-module官网 - github@openresty/echo-nginx-module</a></li>
-        <li><a href="https://source.xuexb.com/post/nginx-echo-module.html">学习使用nginx echo模块</a></li>
+        <li><a href="https://xuexb.com/post/nginx-echo-module.html">学习使用nginx echo模块</a></li>
         <li><a href="https://github.com/xuexb/learn-nginx">我写的学习nginx安装和配置 - github@xuexb/learn-nginx</a></li>
         <li><a href="https://xuexb.com/">前端小武博客 - xuexb.com</a></li>
     </ul>
