--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@ location ~* ^/api/echo(\/[^\/]*?\/?)?$ {
                 <span>打印nginx变量</span>
             </h3>
         </li>
+
+        <li>
+            <h3 id="t6">
+                <a href="/api/cache/?r=时间缀">/api/cache/?r=时间缀</a>
+                <span>查看 nginx proxy cache 变量</span>
+            </h3>
+        </li>
     </ol>
 
     <hr>
